--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   LAMBDA_NAME: "demo-backstage"
-  PACKAGE_NAME: "${{ env.LAMBDA_NAME }}-python-packages"
+  PACKAGE_NAME: "${{LAMBDA_NAME}}-python-packages"
   AWS_DEFAULT_REGION: "ap-southeast-2"
 
 jobs:
