--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,9 +30,9 @@ jobs:
         unzip awscliv2.zip
         ./aws/install
         aws --version
-
-        export AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID_FPT }}"
-        export AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY_FPT }}"
+        echo "[default]" > ~/.aws/credentials
+        echo "aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID_FPT }}" >> ~/.aws/credentials
+        echo "aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY_FPT }}" >> ~/.aws/credentials
 
     - name: Build Infrastructure
       run: |
@@ -60,9 +60,9 @@ jobs:
         unzip awscliv2.zip
         ./aws/install
         aws --version
-
-        export AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID_FPT }}"
-        export AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY_FPT }}"
+        echo "[default]" > ~/.aws/credentials
+        echo "aws_access_key_id=${{ env.AWS_ACCESS_KEY_ID }}" >> ~/.aws/credentials
+        echo "aws_secret_access_key=${{ env.AWS_SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
 
     - name: Deploy Lambda Layer
       run: |
@@ -90,9 +90,9 @@ jobs:
         unzip awscliv2.zip
         ./aws/install
         aws --version
-
-        export AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID_FPT }}"
-        export AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY_FPT }}"
+        echo "[default]" > ~/.aws/credentials
+        echo "aws_access_key_id=${{ env.AWS_ACCESS_KEY_ID }}" >> ~/.aws/credentials
+        echo "aws_secret_access_key=${{ env.AWS_SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
 
     - name: Deploy Lambda Code
       run: |
