--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,8 @@ env:
   LAMBDA_NAME: "demo-backstage"
   PACKAGE_NAME: "demo-backstage-python-packages"
   AWS_DEFAULT_REGION: "ap-southeast-2"
-
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_FPT }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_FPT }}
 jobs:
   build-infras:
     runs-on: self-hosted
@@ -30,10 +31,7 @@ jobs:
         unzip awscliv2.zip
         ./aws/install
         aws --version
-        echo "[default]" > ~/.aws/credentials
-        echo "aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID_FPT }}" >> ~/.aws/credentials
-        echo "aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY_FPT }}" >> ~/.aws/credentials
-
+        
     - name: Build Infrastructure
       run: |
         cd infras-tf
@@ -60,10 +58,7 @@ jobs:
         unzip awscliv2.zip
         ./aws/install
         aws --version
-        echo "[default]" > ~/.aws/credentials
-        echo "aws_access_key_id=${{ env.AWS_ACCESS_KEY_ID }}" >> ~/.aws/credentials
-        echo "aws_secret_access_key=${{ env.AWS_SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
-
+        
     - name: Deploy Lambda Layer
       run: |
         mkdir -p python/lib/python3.10/site-packages/
@@ -90,10 +85,7 @@ jobs:
         unzip awscliv2.zip
         ./aws/install
         aws --version
-        echo "[default]" > ~/.aws/credentials
-        echo "aws_access_key_id=${{ env.AWS_ACCESS_KEY_ID }}" >> ~/.aws/credentials
-        echo "aws_secret_access_key=${{ env.AWS_SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
-
+        
     - name: Deploy Lambda Code
       run: |
         zip -r function.zip custom_encoder.py main.py
