--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,15 @@ name: Lambda Deployment
 
 on:
   workflow_dispatch:
-
+    # Define inputs that are required for the manual trigger
+    inputs:
+      lambdaname:
+        description: "name of lambda"
+        required: true 
+      packagename:
+        description: 'package-name'
+        required: true
 env:
-  LAMBDA_NAME: "demo-backstage"
-  PACKAGE_NAME: "demo-backstage-python-packages"
   AWS_DEFAULT_REGION: "ap-southeast-2"
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_FPT }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_FPT }}
@@ -62,8 +67,8 @@ jobs:
         mkdir -p python/lib/python3.10/site-packages/
         pip install -r requirement.txt --target=python/lib/python3.10/site-packages/
         zip -qr9 ${{ env.PACKAGE_NAME }}.zip python
-        layer_arn=$(aws lambda publish-layer-version --layer-name ${{ env.PACKAGE_NAME }} --zip-file fileb://${{ env.PACKAGE_NAME }}.zip --compatible-runtimes python3.10 --region ${{ env.AWS_DEFAULT_REGION }} | jq -r '.LayerVersionArn')
-        aws lambda update-function-configuration --function-name ${{ env.LAMBDA_NAME }} --layers $layer_arn
+        layer_arn=$(aws lambda publish-layer-version --layer-name ${{ github.event.inputs.lambdaname }} --zip-file fileb://${{ env.github.event.inputs.packagename }}.zip --compatible-runtimes python3.10 --region ${{ env.AWS_DEFAULT_REGION }} | jq -r '.LayerVersionArn')
+        aws lambda update-function-configuration --function-name ${{ github.event.inputs.packagename }} --layers $layer_arn
 
   deploy-lambda-code:
     needs: deploy-layer
@@ -87,6 +92,6 @@ jobs:
     - name: Deploy Lambda Code
       run: |
         zip -r function.zip custom_encoder.py main.py
-        aws lambda update-function-code --function-name ${{ env.LAMBDA_NAME }} --zip-file fileb://function.zip
-        aws lambda wait function-updated --function-name ${{ env.LAMBDA_NAME }}
-        aws lambda update-function-configuration --function-name ${{ env.LAMBDA_NAME }} --region ${{ env.AWS_DEFAULT_REGION }}
+        aws lambda update-function-code --function-name ${{ github.event.inputs.lambdaname }} --zip-file fileb://function.zip
+        aws lambda wait function-updated --function-name ${{ github.event.inputs.lambdaname }}
+        aws lambda update-function-configuration --function-name ${{ github.event.inputs.lambdaname }} --region ${{ env.AWS_DEFAULT_REGION }}
