--- a/.github/workflows/dispatch_build.yml
+++ b/.github/workflows/dispatch_build.yml
@@ -66,9 +66,9 @@ jobs:
       run: |
         mkdir -p python/lib/python3.10/site-packages/
         pip install -r requirement.txt --target=python/lib/python3.10/site-packages/
-        zip -qr9 ${{ env.PACKAGE_NAME }}.zip python
-        layer_arn=$(aws lambda publish-layer-version --layer-name ${{ github.event.inputs.lambdaname }} --zip-file fileb://${{ env.github.event.inputs.packagename }}.zip --compatible-runtimes python3.10 --region ${{ env.AWS_DEFAULT_REGION }} | jq -r '.LayerVersionArn')
-        aws lambda update-function-configuration --function-name ${{ github.event.inputs.packagename }} --layers $layer_arn
+        zip -qr9 ${{ github.event.inputs.packagename }}.zip python
+        layer_arn=$(aws lambda publish-layer-version --layer-name ${{ github.event.inputs.packagename }} --zip-file fileb://${{ github.event.inputs.packagename }}.zip --compatible-runtimes python3.10 --region ${{ env.AWS_DEFAULT_REGION }} | jq -r '.LayerVersionArn')
+        aws lambda update-function-configuration --function-name ${{ github.event.inputs.lambdaname }} --layers $layer_arn
 
   deploy-lambda-code:
     needs: deploy-layer
