--- a/.github/workflows/dispatch_build.yml
+++ b/.github/workflows/dispatch_build.yml
@@ -4,16 +4,23 @@ on:
   workflow_dispatch:
     # Define inputs that are required for the manual trigger
     inputs:
-      lambdaname:
-        description: "name of lambda"
-        required: true 
       packagename:
         description: 'package-name'
         required: true
+      function_name:
+        description: "name of lambda fuction"
+        required: true 
+      dynamodb_partition_key:
+        description: "partition key of dynamoDB"
+        required: true       
+      apigw_stage_name:
+        description: "APIgw's stage(env) name"
+        required: true 
 env:
   AWS_DEFAULT_REGION: "ap-southeast-2"
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_FPT }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_FPT }}
+  AWS_TERRAFORM_BACKEND_BUCKET: "demo-backstage-techdocs"
 jobs:
   build-infras:
     runs-on: self-hosted
@@ -34,13 +41,17 @@ jobs:
         unzip awscliv2.zip
         ./aws/install
         aws --version
-        
+    - name: create terraform.tfvars file
+      run: echo "function_name = \"${{ github.event.inputs.function_name }}\"\ndynamodb_partition_key = \"${{ github.event.inputs.dynamodb_partition_key }}\"\napigw_stage_name = \"${{ github.event.inputs.dynamodb_partition_key }}\"" > ${{ github.event.inputs.function_name }}-terraform.tfvars
+
     - name: Build Infrastructure
       run: |
         cd infras-tf
         terraform init
         terraform plan
-        terraform apply -auto-approve
+        terraform apply -auto-approve -var-file=${{ github.event.inputs.function_name }}-terraform.tfvars
+    - name: push terraform.tfvars to s3 buckets
+      run:  aws s3 cp terraform.tfvars s3://${{ env.AWS_TERRAFORM_BACKEND_BUCKET_LOCATION }}/terraform/${{ github.event.inputs.function_name }}-terraform.tfvars
 
   deploy-layer:
     needs: build-infras
@@ -68,7 +79,7 @@ jobs:
         pip install -r requirement.txt --target=python/lib/python3.10/site-packages/
         zip -qr9 ${{ github.event.inputs.packagename }}.zip python
         layer_arn=$(aws lambda publish-layer-version --layer-name ${{ github.event.inputs.packagename }} --zip-file fileb://${{ github.event.inputs.packagename }}.zip --compatible-runtimes python3.10 --region ${{ env.AWS_DEFAULT_REGION }} | jq -r '.LayerVersionArn')
-        aws lambda update-function-configuration --function-name ${{ github.event.inputs.lambdaname }} --layers $layer_arn
+        aws lambda update-function-configuration --function-name ${{ github.event.inputs.function_name }} --layers $layer_arn
 
   deploy-lambda-code:
     needs: deploy-layer
@@ -92,6 +103,6 @@ jobs:
     - name: Deploy Lambda Code
       run: |
         zip -r function.zip sample-source/custom_encoder.py sample-source/main.py
-        aws lambda update-function-code --function-name ${{ github.event.inputs.lambdaname }} --zip-file fileb://function.zip
-        aws lambda wait function-updated --function-name ${{ github.event.inputs.lambdaname }}
-        aws lambda update-function-configuration --function-name ${{ github.event.inputs.lambdaname }} --region ${{ env.AWS_DEFAULT_REGION }}
+        aws lambda update-function-code --function-name ${{ github.event.inputs.function_name }} --zip-file fileb://function.zip
+        aws lambda wait function-updated --function-name ${{ github.event.inputs.function_name }}
+        aws lambda update-function-configuration --function-name ${{ github.event.inputs.function_name }} --region ${{ env.AWS_DEFAULT_REGION }}
