--- a/.github/workflows/dispatch_build.yml
+++ b/.github/workflows/dispatch_build.yml
@@ -42,7 +42,7 @@ jobs:
         ./aws/install
         aws --version
     - name: create terraform.tfvars file
-      run: echo "function_name = \"${{ github.event.inputs.function_name }}\"\ndynamodb_partition_key = \"${{ github.event.inputs.dynamodb_partition_key }}\"\napigw_stage_name = \"${{ github.event.inputs.dynamodb_partition_key }}\"" > ${{ github.event.inputs.function_name }}-terraform.tfvars
+      run: echo "function_name = \"${{ github.event.inputs.function_name }}\"\ndynamodb_partition_key = \"${{ github.event.inputs.dynamodb_partition_key }}\"\napigw_stage_name = \"${{ github.event.inputs.apigw_stage_name }}\"" > ${{ github.event.inputs.function_name }}-terraform.tfvars
 
     - name: Build Infrastructure
       run: |
@@ -51,7 +51,7 @@ jobs:
         terraform plan
         terraform apply -auto-approve -var-file=${{ github.event.inputs.function_name }}-terraform.tfvars
     - name: push terraform.tfvars to s3 buckets
-      run:  aws s3 cp terraform.tfvars s3://${{ env.AWS_TERRAFORM_BACKEND_BUCKET_LOCATION }}/terraform/${{ github.event.inputs.function_name }}-terraform.tfvars
+      run:  aws s3 cp terraform.tfvars s3://${{ env.AWS_TERRAFORM_BACKEND_BUCKET }}/terraform/${{ github.event.inputs.function_name }}-terraform.tfvars
 
   deploy-layer:
     needs: build-infras
