--- a/.github/workflows/dispatch_build.yml
+++ b/.github/workflows/dispatch_build.yml
@@ -64,9 +64,9 @@ jobs:
 
     - name: Install necessary tools
       run: |
-        sudo apt-get update
-        sudo apt-get install -y jq
-        sudo apt-get install zip
+        apt-get update
+        apt-get install -y jq
+        apt-get install zip
 
         curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
         unzip awscliv2.zip
@@ -92,8 +92,8 @@ jobs:
 
     - name: Install necessary tools
       run: |
-        sudo apt-get update
-        sudo apt-get install zip
+        apt-get update
+        apt-get install zip
 
         curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
         unzip awscliv2.zip
