--- a/.github/workflows/dispatch_build.yml
+++ b/.github/workflows/dispatch_build.yml
@@ -102,7 +102,8 @@ jobs:
         
     - name: Deploy Lambda Code
       run: |
-        zip -r function.zip sample-source/custom_encoder.py sample-source/main.py
+        cd sample-source
+        zip -r function.zip custom_encoder.py main.py
         aws lambda update-function-code --function-name ${{ github.event.inputs.function_name }} --zip-file fileb://function.zip
         aws lambda wait function-updated --function-name ${{ github.event.inputs.function_name }}
         aws lambda update-function-configuration --function-name ${{ github.event.inputs.function_name }} --region ${{ env.AWS_DEFAULT_REGION }}
